created style file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Salom Github men keldim</h1>
     <p> bugun ikkinchi kun</p>
+    <mark>1-24 Att talabalari mark tegini bilmaydi</mark>
 </body>
 </html>
